// Copyright Â© 2019 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

// PeerInfo
message PeerInfo {
  // Port on which the gRPC server is exposed.
  uint32 grpc_port = 1 [(gogoproto.customname) = "GRPCPort"];
  // Indicates whether the gRPC server uses TLS.
  bool tls = 2 [(gogoproto.customname) = "TLS"];
  // Roles of the peer.
  repeated Role roles = 3;

  enum Role {
    NONE = 0;
    ENTITY_REGISTRY = 1;
    ACCESS = 2;
    GATEWAY_SERVER = 3;
    NETWORK_SERVER = 4;
    APPLICATION_SERVER = 5;
    JOIN_SERVER = 6;
    CRYPTO_SERVER = 7;
    DEVICE_TEMPLATE_CONVERTER = 8;
  }

  // Tags of the peer
  map<string,string> tags = 4;
}
